<resources>
    <string name="app_name">Neon</string>
    <string name="welcom">Welcom to Neon</string>
    <string name="email_hint">E-mail</string>
    <string name="pwd_hint">Password</string>
    <string name="forgot_pwd">Forgot Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_acc">CREATE ACCOUNT</string>
    <string name="sign_with">Sign In With</string>
    <string name="track_a_look">Or Take a Look</string>
    <string name="login_as_guest">Login as a Guest!</string>
    <string name="home">Home</string>
    <string name="about_us">About Us</string>
    <string name="share_app">Share Application</string>
    <string name="sign_out">Sign Out</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="facebook_app_id">343085376506434</string>
    <string name="fb_login_protocol_scheme">fb343085376506434</string>
    <string name="userName">User Name</string>
    <string name="search">Search</string>
    <string name="result">No Result Found</string>
    <string name="register_email">Enter Registered Email !</string>
    <string name="back_to_signIn">Back To Sign In</string>
    <string name="reset_password">Reset Password</string>
    <string name="re_pwd_hint">Re-type Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="app_version">1.0</string>
    <string name="app_description">"بتخاف من العلوم؟!.. تعالى بس ما تتكسفش.. بتخاف منها ولا بتحسها مجعلصة ومش ع السكة والدوغري.. طلاسم ومعادلات ومركبات أه شكلها مهمة بس مملة .. هنعمل بيها إيه لو مش فاهمينها!! \n إحنا هنقولك عارف العجلة؟ أه العجلة أكيد سمعت جملة “أصلك مش هنخترع العجلة” دي كتير؟ هنا فعلا إنت مش هتخترع العجلة لأنها أصلا موجودة. بس يهمنا إنك تتعرف على إزاي بتتركب وتتصنع وتستفيد منها بأكتر من شكل.. وكل ده هيحصل بشكل بسيط، ومش هتخرج غير وإنت فاهم وراسي ع الحوار.\n نركز مع بعض بقى. الخطة هتمشي كالآتي: هنشتغل على خطين الأول هنكسر فيه ونهدم أبراج الهجص البلدي اللي قايمة جوه دماغنا، والخط التاني هنشتغل فيه سوا على نضافة نتعرف على إزاي العلوم موجودة وبقوة في حياتنا، إزاي هي مهمة وحيوية ولطيفة وتتحب كمان.. أه والله كيوتة، بس لو استهترت بيها أحيانا بتبقى وحش مخيف هيزعلنا كلنا.. وعلى إيه الطيب أحسن؟\n ” نيـون ” موقع إلكتروني هدفه تقديم محتوى علمي مبسط باللغة العربية والعامية المصرية.. بنقربها مش بنعربها.\n أقسام “نيـون” : النشرة: نقوم بتغطية شبه يومية لأخر المستجدات من اختراعات، اكتشافات، وغيرها في الساحة العلمية.\n عرّفني: مدخل لفهم العديد من موضوعات المقالات القادمة حيث يقدم التعريفات الأساسية، كما يجيب أيضًا عن سؤال ما هو؟ إزاي وليه؟ : سنجيب عن الأسئلة المطروحة (لماذا وكيف) حول العديد من الأمور في حياتنا اليومية. من خير الطبيعة: كل ما يتعلق بحقائق وغرائب عن الكائنات الحية بمختلف أنواعها وأحجامها من أبسطها لأكثرها تعقيدا.\n هجص بلدي: نخصصه للأساطير الشعبية والشائعات المنتشرة حولنا ونتداولها أحيانًا بشكل شبه يومي.\n الملف: الملف يطرح موضوعا بعينه يقدمه لكم في سلسلة مقالات أسبوعيًا. "</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="Array_tittle">
        <item>Departments</item>

    </string-array>
    <string-array name="Home_item">
        <item>2lna4ra</item>
        <item>nawrha</item>
        <item>Why!</item>
        <item>Hags Balady</item>
        <item>7ay Yorzak</item>
        <item>Malaf</item>
        <item>Hydrogina</item>
        <item>Menawaa</item>
        <item>Makalat</item>
        <item> Mosharakat</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
