<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#303f9f"
        android:padding="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:src="@drawable/newback" />

        <ImageView
            android:id="@+id/neon"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:scaleType="fitXY"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/back"
            android:backgroundTint="#9c9a9a"
            android:hint="@string/search"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:visibility="gone" />


    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center|top"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/logo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:id="@+id/logo_Secur" />

        <TextView
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="19sp"
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
        <TextView
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="19sp"
            android:text="@string/app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
          />
        <TextView
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:text="@string/app_description"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:lineSpacingExtra="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
